--- a/www/plugin/date_picker/css/main.css
+++ b/www/plugin/date_picker/css/main.css
@@ -6,7 +6,7 @@
         -o-user-select: none; 
 	display: block;
 	width: 200px;
-	padding:0px 2px 0px 2px;
+	padding:0px 0px 0px 0px;
 	min-height: 200px;
 	position: absolute;
 	border: 1px solid #ccc;
@@ -47,8 +47,9 @@
 	border-radius: 3px;
 }
 
+.datepicker-day-view .datepicker-header .btn-switch:hover,
+.datepicker-month-view .datepicker-header .btn-switch:hover,
 .datepicker-header .btn-next:hover,
-.datepicker-header .btn-switch:hover,
 .datepicker-header .btn-prev:hover{
 	background-color: #e5e5e5;	
 }
@@ -70,6 +71,52 @@
 	display: block;
 	width:15%;
 	float: left;
+}
+
+.datepicker-day-view,
+.datepicker-month-view,
+.datepicker-year-view{
+            float: left;
+            min-height: 220px !important;
+            margin:0px 2px 0px 2px;
+}
+
+
+/*-------------------------------------------------------------------   Toolbox view ---------------------*/
+
+.datepicker-plot-area .toolbox{
+      display: block;
+      width: 100%;
+      height: 20px;
+      float: left;
+      
+      text-align: center;
+      
+      margin-top: 5px;
+      
+      -webkit-border-bottom-right-radius: 6px;
+	-webkit-border-bottom-left-radius: 6px;
+	-moz-border-radius-bottomright: 6px;
+	-moz-border-radius-bottomleft: 6px;
+	border-bottom-right-radius: 6px;
+	border-bottom-left-radius: 6px;
+}
+
+.datepicker-plot-area .toolbox .btn-today{
+      display: block;
+      width: 60px;
+      height: 16px;
+      line-height: 16px;
+      margin:2px auto 2px auto;
+      font-size:10px;
+      cursor: pointer;
+      -webkit-border-radius: 2px;
+	-moz-border-radius: 2px;
+	border-radius: 2px;
+}
+
+.datepicker-plot-area .toolbox .btn-today:hover{
+      background-color: #e5e5e5;
 }
 
 /*-------------------------------------------------------------------   Montyh view ---------------------*/
