Change title of page

--- a/jade/page/layout.jade
+++ b/jade/page/layout.jade
@@ -1,6 +1,6 @@
 !!! transitional
 html( xmlns = "http://www.w3.org/1999/xhtml", lang = "en", 'xml:lang' = "en" )
-  title this is first jade page 
+  title persian web toolkit
   head
     include ../includes/head
   block style
