--- a/jade/page/datepicker.jade
+++ b/jade/page/datepicker.jade
@@ -1,6 +1,8 @@
 extends layout
 
 block style
+
+  link(rel='stylesheet', href='css/datepicker.css')
   link(rel='stylesheet', href='https://rawgithub.com/babakhani/PersianWTK/master/www/plugin/date_picker/css/persianDatepicker.css')
 
 
