--- a/www/plugin/date_picker/js/persianDatepicker.jade
+++ b/www/plugin/date_picker/js/persianDatepicker.jade
@@ -1,5 +1,5 @@
-include development/class.base.sjs
-include development/view/grid.month.view.sjs
-include development/view/p.datePicker.view.sjs
-include development/grid.month.sjs
-include development/p.datePicker.sjs
+include staff/class.base.sjs
+include staff/view/grid.month.view.sjs
+include staff/view/p.datePicker.view.sjs
+include staff/grid.month.sjs
+include staff/p.datePicker.sjs
