--- a/jade/includes/page.header.html
+++ b/jade/includes/page.header.html
@@ -1,7 +1,7 @@
 <div id="header_wrap" class="outer">
 	<header class="inner">
 		<a id="forkme_banner" href="https://github.com/babakhani/PersianWTK">View on GitHub</a>
-		<h1 id="project_title">Persian WTK</h1>
+		<h1 id="project_title">Persian Web Toolkit</h1>
 		<section id="downloads">
 		<a class="zip_download_link" href="https://github.com/babakhani/PersianWTK/zipball/master">Download this project as a .zip file</a>
 		<a class="tar_download_link" href="https://github.com/babakhani/PersianWTK/tarball/master">Download this project as a tar.gz file</a>
