--- a/jade/page/index.jade
+++ b/jade/page/index.jade
@@ -9,11 +9,6 @@ block content
           | Some Ui Tools Compatible With Persian Layout And Jalali Date Like:
         ul
           li
-            a(href='babakhani.github.io/PersianWTK/datepicker')  Persian Date Picker
-            ul
-              li
-                a(href='babakhani.github.io/PersianWTK/datepicker_demo') Demo
-              li
-                a(href='babakhani.github.io/PersianWTK/datepicker_doc') Document
+            a(href='http://babakhani.github.io/PersianWebToolkit/datepicker')  Persian Date Picker
 
   
