--- a/jade/includes/page.header.html
+++ b/jade/includes/page.header.html
@@ -1,7 +1,9 @@
 <div id="header_wrap" class="outer">
 	<header class="inner">
 		<a id="forkme_banner" href="https://github.com/babakhani/PersianWTK">View on GitHub</a>
-		<h3 id="project_title">Persian Web Toolkit</h3>
+		<a href="http://babakhani.github.io/PersianWebToolkit/" >
+			<h3 id="project_title">Persian Web Toolkit</h3>
+		</a>
 			<!--
 		<section id="downloads">
 		<a class="zip_download_link" href="https://github.com/babakhani/PersianWTK/zipball/master">Download this project as a .zip file</a>
