--- a/jade/page/index.jade
+++ b/jade/page/index.jade
@@ -9,6 +9,7 @@ block content
           | Some Ui Tools Compatible With Persian Layout And Jalali Date Like:
         ul
           li
+            a(href='http://babakhani.github.io/PersianWebToolkit/persiandate')  Persian Date Object Doc
             a(href='http://babakhani.github.io/PersianWebToolkit/datepicker')  Persian Date Picker
 
   
