--- a/jade/page/index.jade
+++ b/jade/page/index.jade
@@ -6,7 +6,7 @@ block content
         h1 Coming soon
         h3 Welcome to Persian Web Toolkit Pages.
         p
-          | Some Ui Tools Compatible With Persian Layout And Jalali Date Like:
+          | Some Ui Tools Compatible With RTL Layout And Jalali Date Like:
         ul
           li
             a(href='http://babakhani.github.io/PersianWebToolkit/persiandate')  Persian Date Object Doc
