Add Persian Date to doc page

--- a/jade/page/persiandate.jade
+++ b/jade/page/persiandate.jade
@@ -5,7 +5,7 @@ block style
 
 
 block scripts
-
+  script(src='http://raw.github.com/babakhani/PersianWebToolkit/master/www/js/persian.date.js')
 
 
 block content
