--- a/jade/page/datepicker.jade
+++ b/jade/page/datepicker.jade
@@ -3,10 +3,13 @@ extends layout
 block style
 
   link(rel='stylesheet', href='css/datepicker.css')
-
+  link(rel='stylesheet', href='http://raw.github.com/babakhani/PersianWebToolkit/master/www/plugin/date_picker/css/persianDatepicker.css')
 
 block scripts
-   
+   script(src='http://raw.github.com/babakhani/PersianWebToolkit/master/www/js/jquery/jquery.js')
+   script(src='http://raw.github.com/babakhani/PersianWebToolkit/master/www/js/persian.date.js')
+   script(src='http://raw.github.com/babakhani/PersianWebToolkit/master/www/plugin/date_picker/js/persianDatepicker.js')
+
 
 block content
   #main_content_wrap.outer
