--- a/jade/page/datepicker.jade
+++ b/jade/page/datepicker.jade
@@ -3,7 +3,7 @@ extends layout
 block style
 
   link(rel='stylesheet', href='css/datepicker.css')
-  link(rel='stylesheet', href='http://raw.github.com/babakhani/PersianWebToolkit/master/www/plugin/date_picker/css/persianDatepicker.css')
+  link(rel='stylesheet', href='css/persian.datepicker.css')
 
 block scripts
    script(src='http://raw.github.com/babakhani/PersianWebToolkit/master/www/js/jquery/jquery.js')
