--- a/jade/includes/datepicker.html
+++ b/jade/includes/datepicker.html
@@ -9,9 +9,14 @@
 <span>More info  at:</span>
 <a target="blank" href="http://en.wikipedia.org/wiki/Iranian_calendar" >http://en.wikipedia.org/wiki/Iranian_calendar</a>
 <br/>
-<a></a>
-
-
+<br/>
+<h4>Dependency :</h4>
+<a href="js/pwt.date.js" download="pwt.date.js" >Download pwt.date.js</a>
+<h4>Script :</h4>
+<a href="js/pwt.datepicker.js" download="pwt.datepicker.js" >Download pwt.datepicker.js</a>
+<h4>Style :</h4>
+<a href="css/pwt.datepicker.css" download="pwt.datepicker.css" >Download pwt.datepicker.css</a>
+<br/>
 <div >
 	<h2>Example</h2>
 	<p>
