--- a/jade/page/datepicker.jade
+++ b/jade/page/datepicker.jade
@@ -3,12 +3,12 @@ extends layout
 block style
 
   link(rel='stylesheet', href='css/datepicker.css')
-  link(rel='stylesheet', href='css/persian.datepicker.css')
+  link(rel='stylesheet', href='css/pwt.datepicker.css')
 
 block scripts
-   script(src='http://raw.github.com/babakhani/PersianWebToolkit/master/www/js/jquery/jquery.js')
-   script(src='http://raw.github.com/babakhani/PersianWebToolkit/master/www/js/persian.date.js')
-   script(src='http://raw.github.com/babakhani/PersianWebToolkit/master/www/plugin/date_picker/js/persianDatepicker.js')
+   script(src='js/jquery.js')
+   script(src='js/pwt.date.js')
+   script(src='js/pwt.datepicker.js')
 
 
 block content
