--- a/jade/includes/head.jade
+++ b/jade/includes/head.jade
@@ -1,2 +1,3 @@
 link(rel='stylesheet', href='css/pages.css')
 link(rel='stylesheet', href='css/stylesheet.css')
+<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
