--- a/jade/includes/datepicker.html
+++ b/jade/includes/datepicker.html
@@ -11,11 +11,15 @@
 <br/>
 <br/>
 <h4>Dependency :</h4>
-<a href="js/pwt.date.js" download="pwt.date.js" >Download pwt.date.js</a>
+<a href="http://jquery.org"  >jquery.js </a>1.4 >
+<br/>
+Client Side Persain Date library :
+<br/>
+<a href="js/persainDate.js" download="persainDate.js" >persianDate.js </a>0.1.6 >
 <h4>Script :</h4>
-<a href="js/pwt.datepicker.js" download="pwt.datepicker.js" >Download pwt.datepicker.js</a>
+<a href="js/pwt.datepicker.js" download="pwt.datepicker.js" >pwt.datepicker.js</a>
 <h4>Style :</h4>
-<a href="css/pwt.datepicker.css" download="pwt.datepicker.css" >Download pwt.datepicker.css</a>
+<a href="css/pwt.datepicker.css" download="pwt.datepicker.css" >pwt.datepicker.css</a>
 <br/>
 <div >
 	<h2>Example</h2>
