--- a/jade/page/datepicker.jade
+++ b/jade/page/datepicker.jade
@@ -4,12 +4,17 @@ block style
 
   link(rel='stylesheet', href='css/datepicker.css')
   link(rel='stylesheet', href='css/pwt.datepicker.css')
+  
+  link(rel='stylesheet', href='js/prettify/theme/desert.css')
+  
 
 block scripts
    script(src='js/jquery.js')
    script(src='js/persainDate.js')
    script(src='js/pwt.datepicker.js')
-
+   
+   script(src='js/prettify/prettify.js')
+   
 
 block content
   #main_content_wrap.outer
