--- a/jade/includes/datepicker.html
+++ b/jade/includes/datepicker.html
@@ -6,14 +6,14 @@
 </script>
 
 <div class="page-title-box" >
-	<h2>Persian Date Picker</h2>
+	<h2>Persian Date Picker  </h2>
+	<h3>Version 0.0.2 </h3>
 	<p>
 		This Date picker work with Iranian calendar .
 	</p>
 	<span>More info  at:</span>
 	<a target="blank" href="http://en.wikipedia.org/wiki/Iranian_calendar" >http://en.wikipedia.org/wiki/Iranian_calendar</a>
-	<br/>
-	<br/>
+	
 	<h4>Dependency :</h4>
 	<a href="http://jquery.org"  >jquery.js </a>1.4 >
 	<br/>
@@ -23,7 +23,12 @@
 
 </div>
 <div class="download-box" >
-	<a class="download-zip" href="https://github.com/babakhani/pwt.datepicker/archive/master.zip" ></a>
+	
+		<a class="download-item"  href="https://github.com/babakhani/pwt.datepicker/archive/master.zip" >
+			<span class="download-zip"  ></span>
+			<span class="download-zip-title" >Download Zip <span class="download-info" >From Github<br/> 103 kb</span></span>		
+		</a>
+	
 </div>
 <br/>
 <br/>
