--- a/css/pages.css
+++ b/css/pages.css
@@ -24,22 +24,61 @@ pre .keyword{
       min-height: 300px;
 }
 
-.download-zip{
-      display: block;
+.download-item,
+.download-zip,
+.download-zip-title{
+
+ display: block;
+      position:relative;
       width: 128px;
+      float: right;
+}
+
+.download-item{
+      min-height: 156px;
+	border: 1px dashed #ccc;
+	overflow: hidden;
+	-webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
+	border-radius: 8px;
+}
+
+.download-item:hover{
+      border:1px solid #7ddef2;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      border-radius: 10px;
+      
+      -webkit-box-shadow:  0px 0px 3px 0px rgba(0, 0, 0, 0.5);
+        
+        box-shadow:  0px 0px 3px 0px rgba(0, 0, 0, 0.5);
+}
+
+.download-zip{
       height: 128px;
       background-image: url("../img/icon_zip.png");
       background-repeat: no-repeat;
       background-position: top center;
-      float: left;
 }
 
-.download-zip:hover{
+.download-info{
+      display:block;
+      width:100%;
+      float: right;
+      font-size: 12px;
+}
+
+.download-zip-title{
+      min-height: 28px;
+      text-align: center;
+}
+
+.download-item:hover .download-zip{
       background-position: 0px 2px;
 }
 
-.download-zip:active{
-      background-position: 0px 4px;
+.download-item:active .download-zip{
+      background-position: 0px 10px;
 }
 
 .page-title-box{
