--- a/css/pages.css
+++ b/css/pages.css
@@ -15,6 +15,10 @@ pre .keyword{
       color:#380D00;
 }
 
+.warning-version{
+      color:red;
+}
+
 
 /* ----------------------- Download Area ----------------*/
 
