--- a/jade/includes/page.footer.jade
+++ b/jade/includes/page.footer.jade
@@ -1,5 +1,5 @@
 #footer_wrap.outer
       footer.inner
         p.copyright
-          | Persian WTK maintained by
-          a(href='https://github.com/babakhani') Reza Babakhani
+          | Persian Web Toolkit maintained by
+          a(href='https://github.com/babakhani')  Reza Babakhani
