--- a/css/pages.css
+++ b/css/pages.css
@@ -19,6 +19,19 @@ pre .keyword{
       color:red;
 }
 
+#project_title{
+width:50%;
+float:left;
+font-size: 25px !important;
+}
+
+.page-gplus-btn,
+.page-git-star-btn{
+      float:right;
+      margin-top:10px;
+      margin-right:4px;
+
+}
 
 /* ----------------------- Download Area ----------------*/
 
