--- a/jade/includes/head.jade
+++ b/jade/includes/head.jade
@@ -1,5 +1,6 @@
-link(rel='stylesheet', href='./css/pages.css')
-link(rel='stylesheet', href='./css/stylesheet.css')
+link(rel='stylesheet', href='css/pages.css')
+link(rel='stylesheet', href='css/stylesheet.css')
+
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <link rel="canonical" href="http://babakhani.github.io/PersianWebToolkit" />
 
