--- a/jade/includes/head.jade
+++ b/jade/includes/head.jade
@@ -2,8 +2,7 @@ link(rel='stylesheet', href='css/pages.css')
 link(rel='stylesheet', href='css/stylesheet.css')
 
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-<link rel="canonical" href="http://babakhani.github.io/PersianWebToolkit" />
-
+<link rel="canonical" href="http://babakhani.github.io/PersianWebToolkit/" />
 <meta name="description" content="javascript,datepicker,date,persian,calendar">
 <meta name="keywords" content="javascript,datepicker,date,persian,calendar">
 
