--- a/jade/includes/page.footer.jade
+++ b/jade/includes/page.footer.jade
@@ -3,3 +3,4 @@
         p.copyright
           | Persian Web Toolkit maintained by
           a(href='https://github.com/babakhani')  Reza Babakhani
+          include g.analic.html
