--- a/jade/includes/search.html
+++ b/jade/includes/search.html
@@ -1,15 +1,13 @@
-<script>
+<div class="search-box" >
+	<script>
   (function() {
-    var cx = '006105496046926375623:oqcigedks58';
-    var gcse = document.createElement('script');
-    gcse.type = 'text/javascript';
-    gcse.async = true;
+    var cx = '006105496046926375623:WMX467610434';
+    var gcse = document.createElement('script'); gcse.type = 'text/javascript'; gcse.async = true;
     gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
         '//www.google.com/cse/cse.js?cx=' + cx;
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(gcse, s);
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(gcse, s);
   })();
 </script>
-<gcse:search></gcse:search>
+<gcse:search enableHistory="true" newWindow="true" ></gcse:search>
 
-
+</div>
