--- a/jade/includes/search.rest.html
+++ b/jade/includes/search.rest.html
@@ -8,6 +8,10 @@
         document.getElementById("content").innerHTML += "<br>" + item.htmlTitle;
       }
     }
+    
+    
     </script>
     <script src="https://www.googleapis.com/customsearch/v1?key=AIzaSyCEnsIUkYnKcMilSXHXghro7T-xjoyiWVU&cx=006105496046926375623:WMX467610434&q=d&callback=hndlr">
     </script>
+    
+hi public key
