Sample event added

--- a/jade/includes/search.html
+++ b/jade/includes/search.html
@@ -4,10 +4,10 @@
     var cx = '006105496046926375623:WMX467610434';
     var gcse = document.createElement('script'); gcse.type = 'text/javascript'; gcse.async = true;
     gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
-        '//www.google.com/cse/cse.js?cx=' + cx+"&sort=start-date";
+        '//www.google.com/cse/cse.js?cx=' + cx+"&sort=dtstart";
+        
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(gcse, s);
   })();
 </script>
-<gcse:search enableHistory="true" newWindow="true" ></gcse:search>
-
+	<gcse:search enableHistory="true" newWindow="true" ></gcse:search>
 </div>
