--- a/jade/includes/event1.html
+++ b/jade/includes/event1.html
@@ -9,7 +9,7 @@
    Francisco show.</span>
 
   When:
-  <time itemprop="startDate" datetime="2015-10-15T19:00-08:00">2015 Oct 15, 7:00PM</time>—
+  <time itemprop="startDate" datetime=" 2009-12-31">2015 Oct 15, 7:00PM</time>—
   <time itemprop="endDate" datetime="2015-10-15T19:00-08:00">2015 Oct 15, 9:00PM</time>
 
   Where:
