--- a/jade/includes/persiandate.doc.html
+++ b/jade/includes/persiandate.doc.html
@@ -204,7 +204,12 @@
 		<p>
 			You can create a persianDate with an array of numbers that mirror the parameters passed to <a href="https://developer.mozilla.org/en/JavaScript/Reference/Global_Objects/Date">new Date()</a>But As Persian Date Number Like  [1393,2,22,11,22,30]
 		</p>
-
+		
+		
+		<p>
+			<strong>Note:</strong>In this version array of Gregorian Date dose not Support 
+		</p>
+		
 		<div class="highlight">
 			<pre lang="javascript">[year, month, day, hour, minute, second, millisecond]
 persianDate([<span class="number">1393</span>, <span class="number">1</span>, <span class="number">14</span>, <span class="number">15</span>, <span class="number">25</span>, <span class="number">50</span>, <span class="number">125</span>]); <span class="comment">// 1393-01-14 15:25:50 PM</span>
