--- a/jade/page/layout.jade
+++ b/jade/page/layout.jade
@@ -3,8 +3,7 @@ html( xmlns = "http://www.w3.org/1999/xhtml", lang = "en", 'xml:lang' = "en" )
   title Persian Web Toolkit
   head
     include ../includes/head
-    include ../includes/head.script.html
-    
+    include ../includes/head.script.htmlm
   block style
   
   block scripts  
