--- a/jade/includes/persiandate.doc.html
+++ b/jade/includes/persiandate.doc.html
@@ -6,8 +6,11 @@
 </script>
 
 <div class="page-title-box" >
-	<h6 class="warning-version" >Beta Version 0.1.7  |  Draft Document  | This Document Compatibel with 0.1.7</h6>
-	<h1>Persian Date</h2> <h2> javascript date library for parsing, validating, manipulating, and formatting <strong>persian dates</strong> System. </h2>
+	<h1>Persian Date</h2> 
+	<h6 class="warning-version" >Version 0.1.7</h6>
+		
+		
+		<h2> javascript date library for parsing, validating, manipulating, and formatting <strong>persian dates</strong> System. </h2>
 	<p>
 		Inspired by <a href="http://momentjs.com/" >moment.js</a>
 	</p><span>More info  at</span><a target="blank" href="http://en.wikipedia.org/wiki/Iranian_calendar" >http://en.wikipedia.org/wiki/Iranian_calendar</a>
