--- a/jade/page/persiandate.jade
+++ b/jade/page/persiandate.jade
@@ -7,7 +7,7 @@ block style
 
 block scripts
   script(src='js/jquery.js')
-  script(src='../PersianDate/persianDate.js')
+  script(src='js/persianDate.js')
   script(src='js/prettify/prettify.js')
 
 
