Fix naming convention

--- a/jade/includes/persiandate.doc.html
+++ b/jade/includes/persiandate.doc.html
@@ -26,7 +26,7 @@
 	<div class="prose">
 
 		<div class="highlight">
-			<pre >&lt;script src="persianDate.js"&gt;&lt;/script&gt;
+			<pre >&lt;script src="pwt-date.js"&gt;&lt;/script&gt;
 &lt;script&gt;
     persianDate().format();
 &lt;/script&gt;
