--- a/jade/page/datepicker.jade
+++ b/jade/page/datepicker.jade
@@ -10,8 +10,8 @@ block style
 
 block scripts
    script(src='js/jquery.js')
-   script(src='js/persainDate.js')
-   script(src='js/pwt.datepicker.js')
+   script(src='js/pwt-date.js')
+   script(src='js/pwt-datepicker.js')
    
    script(src='js/prettify/prettify.js')
    
