--- a/jade/page/index.jade
+++ b/jade/page/index.jade
@@ -3,14 +3,5 @@ extends layout
 block content
     #main_content_wrap.outer
       section#main_content.inner
-        h1 Coming soon
-        h3 Welcome to Persian Web Toolkit Pages.
-        p
-          | Some Ui Tools Compatible With RTL Layout And Jalali Date Like:
-        ul
-          li
-            a(href='http://babakhani.github.io/PersianWebToolkit/persiandate')  Persian Date Object Doc
-          li  
-            a(href='http://babakhani.github.io/PersianWebToolkit/datepicker')  Persian Date Picker
-
+          include ../includes/homepage.html
   
