Fix Naming convention

--- a/jade/page/datepicker.jade
+++ b/jade/page/datepicker.jade
@@ -3,7 +3,7 @@ extends layout
 block style
 
   link(rel='stylesheet', href='css/datepicker.css')
-  link(rel='stylesheet', href='css/pwt.datepicker.css')
+  link(rel='stylesheet', href='css/pwt-datepicker.css')
   
   link(rel='stylesheet', href='js/prettify/theme/desert.css')
   
