--- a/jade/includes/homepage.html
+++ b/jade/includes/homepage.html
@@ -1,6 +1,6 @@
 
 <h3>Persian Web Toolkit</h3>
-<p>Some Ui Tools Compatible With RTL Layout And 
+<p>Some Ui Tools Compatible With Persian Layout And 
 	<a target="_blank" href="http://en.wikipedia.org/wiki/Jalali_calendar" >Jalali Calendar</a>
 </p>
 <ul>
