--- a/jade/includes/datepicker.html
+++ b/jade/includes/datepicker.html
@@ -21,15 +21,17 @@
 	<br/>
 	Client Side Persain Date library :
 	<br/>
-	<a href="js/persainDate.js" download="persainDate.js" >persianDate.js </a>0.1.6 > 
+	<a href="js/persainDate.js" download="persainDate.js" >pwt.date.js </a>0.1.6 > 
 
 </div>
 <div class="download-box" >
-	
 		<a class="download-item"  href="https://github.com/babakhani/pwt.datepicker/archive/master.zip" >
 			<span class="download-zip"  ></span>
 			<span class="download-zip-title" >Download Zip <span class="download-info" >From Github</span></span>		
 		</a>
+		<div class="page-git-star-btn" >
+			<iframe src="http://ghbtns.com/github-btn.html?user=babakhani&repo=pwt.datepicker&type=watch&count=false" allowtransparency="true" frameborder="0" scrolling="0" width="55px" height="20px"></iframe>
+	</div>
 	
 </div>
 <br/>
@@ -56,7 +58,7 @@
 		&lt;head&gt;
 			&lt;link rel="stylesheet" href="css/pwt.datepicker.css"/&gt;
 			&lt;script src="js/jquery.js"&gt;&lt;/script&gt;
-			&lt;script src="js/persainDate.js"&gt;&lt;/script&gt;
+			&lt;script src="js/pwt.date.js"&gt;&lt;/script&gt;
 			&lt;script src="js/pwt.datepicker.js"&gt;&lt;/script&gt;
 		&lt;/head&gt;
 		
