--- a/jade/includes/page.header.html
+++ b/jade/includes/page.header.html
@@ -3,10 +3,6 @@
 		<a href="http://babakhani.github.io/PersianWebToolkit/" >
 			<h3 id="project_title">Persian Web Toolkit</h3>
 		</a>
-		
-		<div class="page-git-star-btn" >
-			<iframe src="http://ghbtns.com/github-btn.html?user=babakhani&repo=PersianWebToolkit&type=watch&count=false" allowtransparency="true" frameborder="0" scrolling="0" width="55px" height="20px"></iframe>
-		</div>
 		<div class="page-gplus-btn" >
 			<div class="g-plusone" data-size="tall" data-annotation="none"></div>
 		</div>
@@ -18,12 +14,14 @@
 		  })();
 		</script>
 		
-		<!--
-		<a id="forkme_banner" href="https://github.com/babakhani/PersianWebToolkit">View on GitHub</a>
-		<section id="downloads">
-		<a class="zip_download_link" href="https://github.com/babakhani/PersianWebToolkit/zipball/master">Download this project as a .zip file</a>
-		<a class="tar_download_link" href="https://github.com/babakhani/PersianWebToolkit/tarball/master">Download this project as a tar.gz file</a>
-		</section>
-		-->
+		
+		<ul id="pageHeaderMenu" class="page-header-menu" >
+			<li>
+				<a projectName="persiandate" href="persiandate.html" >Persian Date</a>
+			</li>
+			<li>
+				<a  projectName="datepicker" href="datepicker.html" >Datepicker</a>
+			</li>
+		</ul>
 	</header>
 </div>
