--- a/jade/includes/persiandate.doc.html
+++ b/jade/includes/persiandate.doc.html
@@ -11,7 +11,11 @@
 		<h2> javascript date library for parsing, validating, manipulating, and formatting <strong>persian dates</strong> System. </h2>
 	<p>
 		Inspired by <a href="http://momentjs.com/" >moment.js</a>
-	</p><span>More info  at </span><a target="blank" href="http://en.wikipedia.org/wiki/Iranian_calendar" >http://en.wikipedia.org/wiki/Iranian_calendar</a>
+	</p>
+	<p>
+		<a href="https://github.com/babakhani/PersianDate" >github</a>
+	</p>
+	<span>More info  at </span><a target="blank" href="http://en.wikipedia.org/wiki/Iranian_calendar" >http://en.wikipedia.org/wiki/Iranian_calendar</a>
 </div>
 <div class="download-box" >
 	<a class="download-item"  href="https://github.com/babakhani/PersianDate/archive/master.zip" > <span class="download-zip"  ></span> <span class="download-zip-title" >Download Zip <span class="download-info" >From Github</span></span> </a>
