--- a/jade/includes/persiandate.doc.html
+++ b/jade/includes/persiandate.doc.html
@@ -13,7 +13,7 @@
 		Inspired by <a href="http://momentjs.com/" >moment.js</a>
 	</p>
 	<p>
-		<a href="https://github.com/babakhani/PersianDate" >github</a>
+		<a href="https://github.com/babakhani/PersianDate" >Project on github</a>
 	</p>
 	<span>More info  at </span><a target="blank" href="http://en.wikipedia.org/wiki/Iranian_calendar" >http://en.wikipedia.org/wiki/Iranian_calendar</a>
 </div>
