--- a/jade/includes/datepicker.html
+++ b/jade/includes/datepicker.html
@@ -6,7 +6,7 @@
 
 <div class="page-title-box" >
 	<h1>Date Picker</h1>
-	<h5 class="warning-version" >Beta Version 0.0.2 </h5>
+	<h5 class="warning-version" >Beta Version 0.0.4 </h5>
 	<p>
 		This Date picker work with Iranian calendar .
 	</p>
@@ -84,10 +84,60 @@
 		</thead>
 		<tbody>
 			<tr>
-				<td>viewFormat</td>
+				<td>format <span class="minor-version" >0.0.4</span> </td>
 				<td>string</td>
 				<td>'mm/dd/yyyy'</td>
 				<td>the date format, combination of  d, dd, m, mm, yy, yyy.</td>
+			</tr>
+			<tr>
+				<td>formatter <span class="minor-version" >0.0.4</span></td>
+				<td>Function</td>
+				<td>--</td>
+				<td>format value of input
+				<br/>
+				{...
+				<br/>
+				viewFormatter: function(unixDate){return unixDate}
+				<br/>
+				...} </td>
+			</tr>
+			<tr>
+				<td>altField <span class="minor-version" >0.0.4</span> </td>
+				<td>selector string</td>
+				<td>false</td>
+				<td>An input element that is to be updated with the selected date from the datepicker. Use the altFormat option to change the format of the date within this field. Leave as blank for no alternate field.
+					acceptable value: : '#elementId','.element-class'</td>
+			</tr>
+			<tr>
+				<td>altFormat <span class="minor-version" >0.0.4</span> </td>
+				<td>string</td>
+				<td>unix</td>
+				<td>The <a target="_blank " href="http://babakhani.github.io/PersianWebToolkit/persiandate#/displaying/format/" >dateFormat</a>
+					 to be used for the altField option. acceptable value: <strong>unix,gregorian,g,u,YYYY/mMM/DD</strong></td>
+			</tr>
+			<tr>
+				<td>observer <span class="minor-version" >0.0.4</span> </td>
+				<td>Boolean</td>
+				<td>false</td>
+				<td>if you use $(element).val() to set input val and 'observer : true' , datepicker sync with your  inputed Value. Observer Watch input and altField Elemets.</td>
+			</tr>
+			<tr>
+				<td>onShow <span class="minor-version" >0.0.4</span> </td>
+				<td>Function</td>
+				<td>--</td>
+				<td>A function that takes current datepicker instance. It is called just before the datepicker is displayed.</td>
+			</tr>
+			<tr>
+				<td>onHide <span class="minor-version" >0.0.4</span> </td>
+				<td>Function</td>
+				<td>--</td>
+				<td>A function that takes current datepicker instance. It is called just before the datepicker Hide.</td>
+			</tr>
+			<tr>
+				<td>onSelect<span class="minor-version" >0.0.4</span> </td>
+				<td>Function</td>
+				<td>--</td>
+				<td>A function that takes current datepicker unixDate. It is called When Day Select.</td>
 			</tr>
 			<tr>
 				<td>viewMode</td>
@@ -119,14 +169,9 @@
 				<td>true</td>
 				<td>Show Hide toolbox element </td>
 			</tr>
+			
 			<tr>
-				<td>mask</td>
-				<td>String | Intger</td>
-				<td>false</td>
-				<td>If Mask Set Datepicker add input hidden whit name of main input and set value for this on select date, acceptable value: <strong>unix,gregorian</strong></td>
-			</tr>
-			<tr>
-				<td>viewFormatter</td>
+				<td>viewFormatter<span class="deprecated-version" >Deprecated In 0.0.4</span> </td>
 				<td>Function</td>
 				<td>--</td>
 				<td>format value of input
@@ -138,7 +183,19 @@
 				...} </td>
 			</tr>
 			<tr>
-				<td>maskFormatter</td>
+				<td>viewFormat <span class="deprecated-version" >Deprecated In 0.0.4</span> </td>
+				<td>string</td>
+				<td>'mm/dd/yyyy'</td>
+				<td>the date format, combination of  d, dd, m, mm, yy, yyy.</td>
+			</tr>
+			<tr>
+				<td>mask<span class="deprecated-version" >Deprecated In 0.0.4</span> </td>
+				<td>String | Intger</td>
+				<td>false</td>
+				<td>If Mask Set Datepicker add input hidden whit name of main input and set value for this on select date, acceptable value: <strong>unix,gregorian</strong></td>
+			</tr>
+			<tr>
+				<td>maskFormatter<span class="deprecated-version" >Deprecated In 0.0.4</span> </td>
 				<td>Function</td>
 				<td>--</td>
 				<td>format value of mask input
@@ -149,6 +206,40 @@
 				<br/>
 				...} </td>
 			</tr>
+			
+		</tbody>
+	</table>
+	<h3>Methods</h3>
+	<table class="table table-bordered table-striped">
+		<thead>
+			<tr>
+				<th style="width: 100px;">Name</th>
+				<th style="width: 100px;">Arguments</th>
+				<th style="width: 100px;">Description</th>
+				<th>Sample Code</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>show() <span class="minor-version" >0.0.4</span> </td>
+				<td>This method does not accept any arguments.</td>
+				<td>Open the date picker.</td>
+				<td><pre  class="prettyprint lang-html" >$( ".selector" ).datepicker( "show" );</pre></td>
+			</tr>
+			<tr>
+				<td>hide() <span class="minor-version" >0.0.4</span> </td>
+				<td>This method does not accept any arguments.</td>
+				<td>Close the date picker.</td>
+				<td><pre  class="prettyprint lang-html" >$( ".selector" ).datepicker( "hide" );</pre></td>
+			</tr>
+			<tr>
+				<td>destroy <span class="minor-version" >0.0.4</span> </td>
+				<td>This method does not accept any arguments.</td>
+				<td>Removes the datepicker functionality completely. </td>
+				<td><pre  class="prettyprint lang-html" >$( ".selector" ).datepicker( "destroy" );</pre></td>
+			</tr>
+			
+			
 		</tbody>
 	</table>
 </div>
