refrence directly to github js files

--- a/jade/includes/datepicker.html
+++ b/jade/includes/datepicker.html
@@ -21,7 +21,7 @@
 	<br/>
 	Client Side Persain Date library :
 	<br/>
-	<a href="js/persainDate.js" download="persainDate.js" >pwt.date.js </a>0.1.6 > 
+	<a href="js/pwt-date.js" download="pwt-date.js" >pwt.date.js </a>0.1.6 > 
 
 </div>
 <div class="download-box" >
