Add persian date unit tests to website

--- a/jade/includes/persiandate.doc.html
+++ b/jade/includes/persiandate.doc.html
@@ -13,6 +13,9 @@
 		Inspired by <a href="http://momentjs.com/" >moment.js</a>
 	</p>
 	<p>
+		<a href="./persian-date-tests.html" >Tests</a>
+	</p>
+	<p>
 		<a href="https://github.com/babakhani/PersianDate" >Project on github</a>
 	</p>
 	<span>More info  at </span><a target="blank" href="http://en.wikipedia.org/wiki/Iranian_calendar" >http://en.wikipedia.org/wiki/Iranian_calendar</a>
