--- a/jade/includes/datepicker.html
+++ b/jade/includes/datepicker.html
@@ -6,7 +6,7 @@
 
 <div class="page-title-box" >
 	<h1>Date Picker</h1>
-	<h5 class="warning-version" >Beta Version 0.0.4 </h5>
+	<h5 class="warning-version" >Beta Version 0.1.7 </h5>
 	<p>
 		This Date picker work with Iranian calendar .
 	</p>
@@ -17,12 +17,23 @@
 	<a target="blank" href="http://en.wikipedia.org/wiki/Iranian_calendar" >http://en.wikipedia.org/wiki/Iranian_calendar</a>
 	<br/>
 	<h3>Dependency </h3>
-	<a href="http://jquery.org"  >jquery.js</a>1.4 >
+	<a href="http://jquery.org"  >jquery.js</a>1.4 &#62;
 	<br/>
 	Client Side Persain Date library :
 	<br/>
-	<a href="js/pwt-date.js" download="pwt-date.js" >pwt.date.js </a>0.1.6 > 
-
+	<a href="js/pwt-date.js" download="pwt-date.js" >pwt.date.js </a>0.1.6 &#62;
+	<br/>
+	<h3>Fiddle Example</h3>
+	<a target="blank" href="http://jsfiddle.net/babareza/DqppC/1/" >Simple Initialize</a> | 
+	<a target="blank" href="http://jsfiddle.net/babareza/PAg54/" >Custom Format</a> | 
+	<a target="blank" href="http://jsfiddle.net/babareza/Gm7eM/" >Alt Field</a> | 
+	<a target="blank" href="http://jsfiddle.net/babareza/wjfNG/ " >Engilsh Number</a> | 
+	<a target="blank" href="http://jsfiddle.net/babareza/dAhEa/" >Custom Position</a>
+	
+	
+	<br/>
+	more exapmle comming soon
+	
 </div>
 <div class="download-box" >
 		<a class="download-item"  href="https://github.com/babakhani/pwt.datepicker/archive/master.zip" >
@@ -97,7 +108,7 @@
 				<br/>
 				{...
 				<br/>
-				viewFormatter: function(unixDate){return unixDate}
+				formatter: function(unixDate){return unixDate}
 				<br/>
 				...} </td>
 			</tr>
@@ -110,10 +121,22 @@
 			</tr>
 			<tr>
 				<td>altFormat <span class="minor-version" >0.0.4</span> </td>
-				<td>string</td>
+				<td>String</td>
 				<td>unix</td>
 				<td>The <a target="_blank " href="http://babakhani.github.io/PersianWebToolkit/persiandate#/displaying/format/" >dateFormat</a>
 					 to be used for the altField option. acceptable value: <strong>unix,gregorian,g,u,YYYY/mMM/DD</strong></td>
+			</tr>
+			<tr>
+				<td>altFieldFormatter <span class="minor-version" >0.0.4</span> </td>
+				<td>Function</td>
+				<td>--</td>
+				<td>format value of  'altField' input
+				<br/>
+				{...
+				<br/>
+				altFieldFormatter: function(unixDate){return unixDate}
+				<br/>
+				...} </td>
 			</tr>
 			<tr>
 				<td>observer <span class="minor-version" >0.0.4</span> </td>
