add some fiddle example to datepicker doc

--- a/jade/includes/datepicker.html
+++ b/jade/includes/datepicker.html
@@ -25,15 +25,13 @@
 	<br/>
 	<h3>Fiddle Example</h3>
 	<a target="blank" href="http://jsfiddle.net/babareza/DqppC/1/" >Simple Initialize</a> | 
-	<a target="blank" href="http://jsfiddle.net/babareza/PAg54/" >Custom Format</a> | 
+	<a target="blank" href="http://jsfiddle.net/babareza/PAg54/" >Custom Format</a> |
+	<a target="blank" href="http://jsfiddle.net/babareza/z3G2q/" >Formatter Function</a> | 
 	<a target="blank" href="http://jsfiddle.net/babareza/Gm7eM/" >Alt Field</a> | 
 	<a target="blank" href="http://jsfiddle.net/babareza/wjfNG/ " >Engilsh Number</a> | 
-	<a target="blank" href="http://jsfiddle.net/babareza/dAhEa/" >Custom Position</a>
-	
-	
+	<a target="blank" href="http://jsfiddle.net/babareza/dAhEa/" >Custom Position</a> |
+	<a target="blank" href="http://jsfiddle.net/babareza/Vx5TG/" >Custom View Mode</a>
 	<br/>
-	more exapmle comming soon
-	
 </div>
 <div class="download-box" >
 		<a class="download-item"  href="https://github.com/babakhani/pwt.datepicker/archive/master.zip" >
