--- a/jade/includes/head.jade
+++ b/jade/includes/head.jade
@@ -1,9 +1,6 @@
 link(rel='stylesheet', href='css/pages.css')
-
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <link rel="canonical" href="http://babakhani.github.io/PersianWebToolkit" />
-
 <meta name="description" content="javascript,datepicker,date,persian,calendar">
-<meta name="keywords" content="javascript,datepicker,date,persian,calendar">
-
-
+meta(name='keyword', content='persian,datepicker,date,khayam,jalali,reza,babakhani,jquery,plugin,javascript,js,persian web toolkit,pwt')
+link(rel='shortcut icon', href='img/favicon.png')
