--- a/css/pages.css
+++ b/css/pages.css
@@ -318,7 +318,7 @@ Full-Width Styles
 }
 
 #project_title {
-  margin: 0;
+  margin: 5px 0px 0px 0px;
   color: #fff;
   font-size: 30px;
   font-weight: 200;
@@ -638,6 +638,16 @@ font-size: 25px !important;
       float: left;
       width:100%;
       background-color: #333;
+}
+
+.page-logo{
+      display: block;
+      width:32px;
+      height: 32px;
+      float: left;
+      background-image: url("../img/logo.png");
+      background-repeat: no-repeat;
+      margin:6px 6px 0px 0px;
 }
 
 /*------------------------ Header Menu ------------------*/
