--- a/jade/includes/page.header.html
+++ b/jade/includes/page.header.html
@@ -1,6 +1,7 @@
 <div id="header_wrap" class="outer">
 	<header class="inner">
 		<a href="http://babakhani.github.io/PersianWebToolkit/" >
+			<div class="page-logo" ></div>
 			<h3 id="project_title">Persian Web Toolkit</h3>
 		</a>
 		<ul id="pageHeaderMenu" class="page-header-menu" >
