--- a/jade/includes/datepicker.html
+++ b/jade/includes/datepicker.html
@@ -13,6 +13,11 @@
 	<p>
 		<a href="https://github.com/babakhani/pwt.datepicker" >Project on github</a>
 	</p>
+	<p>
+		<a href="http://plugins.jquery.com/pwt.datepicker/" >Project on Jquery</a>
+	</p>
+	
+	
 	<span>More info  at</span>
 	<a target="blank" href="http://en.wikipedia.org/wiki/Iranian_calendar" >http://en.wikipedia.org/wiki/Iranian_calendar</a>
 	<br/>
